[tool.poetry]
name = "skript"
version = "0.1.0"
description = ""
authors = ["dima cheban <dimacheban23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
psutil = "^6.1.0"
pynput = "^1.7.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
